# PythonPackaging

workflow/: main.py  pyproject.toml
workflow/src/Calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workflow/src/addition_package/: __init__.py
workflow/src/multiplication_package/: multiplication_module.py
workflow/test/: add_test.py  mul_test.py
